--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
     "@vitejs/plugin-vue": "^4.2.0",
     "typescript": "^5.0.0",
     "vite": "^4.3.0",
-    "vue-tsc": "^1.2.0"
+    "vue-tsc": "^1.2.0",
+    "vitest": "^1.0.0"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ai": "vitest --testPathPattern=\"ai-assistant\""
   }
 }
